--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    font-family: sans-serif;
 }
 
 a {
@@ -12,6 +14,7 @@ footer {
     display: flex;
     margin-left: auto;
     font-size: 28px;
+    font-weight: 800;
 }
 
 button {
@@ -27,8 +30,7 @@ button {
     height: auto;
     width: 250px;
     border: 5px solid #3882f6;
-    border-radius: 5%;
- }
+    border-radius: 5%;}
 
  img.top {
     border: 2px solid;
@@ -55,6 +57,7 @@ p.minor {
 .topbar {
     display: flex;
     background-color: #1f2937;
+    padding: 0px 75px 40px;
 }
 
 .logo {
@@ -62,6 +65,8 @@ p.minor {
     margin-right: auto;
     color: #f9f8fa;
     align-items: center;
+    font-size: 24px;
+    color: #f9faf8;
 }
 
 .right {
@@ -73,11 +78,14 @@ p.minor {
     list-style: none;
     display: flex;
     gap: 12px;
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
 .first {
     display: flex;
     background-color: #1f2937;
+    padding: 40px 75px;
 }
 
 .intro {
@@ -85,15 +93,26 @@ p.minor {
     font-size: 48px;
     font-weight: 800;
     color: #f9faf8;
+    gap: 10px;
+}
+
+.p {
+    display: flex;
+    flex-direction: column;
+    color:#f9f8fa;
 }
 .about {
     display: flex;
     flex-direction: column;
+    justify-content: start;
+    gap: 10px;
 }
 
 .about p {
     font-size: 18px;
     color: #e5e7eb;
+    flex-wrap: wrap;
+    flex-grow: 1;
 }
 
 .pics {
@@ -105,6 +124,7 @@ p.minor {
 .main {
     display: flex;
     flex-direction: column;
+    padding: 30px 100px;
 }
 
 .main p {
@@ -138,10 +158,18 @@ p.minor {
 .quote {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #e5e7eb;
     font-size: 36px;
     font-style: italic;
     font-weight: 300;
+    padding: 60px 100px;
+}
+
+.quote q{
+    margin: auto;
+    quotes: none;
 }
 
 .footer {
@@ -150,7 +178,8 @@ p.minor {
     color: #f9f8fa;
     align-items: center;
     justify-content: center;
-}
+    padding: 20px;
+    }
 
 .call {
     display: flex;
