--- a/style.css
+++ b/style.css
@@ -1,205 +1,195 @@
 body {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    font-family: sans-serif;
-}
+} 
 
-a {
-    color: #f9faf8;
-    text-decoration: none;
-}
-
-footer {
-    display: flex;
-    margin-left: auto;
-    font-size: 28px;
-    font-weight: 800;
+img {
+max-width: 600px;
+min-width: 0;
+border-radius: 10px;
+border: 2px solid #3882F6;
+background: #3882F6;
 }
 
 button {
- display: flex;
- color: #f9f8fa;
- background-color: #3882f6;
- border-color: #f9faf8;
- border-style: solid ;
- padding: 3px 10px;
- border-radius: 10%;}
-
- img {
-    height: auto;
-    width: 250px;
-    border: 5px solid #3882f6;
-    border-radius: 5%;}
-
- img.top {
-    border: 2px solid;
-    border-radius:1%;
-    border-color: #f9f8fa;
- }
-
-
-
-p {
-    color: #f9f8fa;
-}
-
-p.major {
-    font-weight: 800;
-    font-size: 20px;
-}
-p.minor {
-    font-weight: 300;
-    font-size: 14px;
-    margin-top: -20px;
-}
-
-.topbar {
-    display: flex;
-    background-color: #1f2937;
-    padding: 0px 75px 40px;
-}
-
-.logo {
-    display: flex;
-    margin-right: auto;
-    color: #f9f8fa;
-    align-items: center;
-    font-size: 24px;
+    background-color: #3882F6;
     color: #f9faf8;
+    border-radius: 8px;
+    border: 2px solid #3882F6;
+    padding: 8px 16px;
 }
 
-.right {
+div.header {
     display: flex;
+    flex-direction: row;
+    background-color: #1f2937;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+div.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #f9faf8;
+    font-size: 48px;
+    font-weight: 800;
+}
+
+div.links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-left: auto;
 }
 
-.links {
-    list-style: none;
+ul {
     display: flex;
+    list-style-type: none;
     gap: 12px;
-    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
     color: #e5e7eb;
+    font-size: 18px;
 }
 
-.first {
+
+div.bio-section {
     display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    flex-shrink: 1;
+    gap: 15px;
+    padding: 40px 40px 60px;
     background-color: #1f2937;
-    padding: 40px 75px;
 }
 
-.intro {
+div.bio-section-left {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: flex-start;
+}
+
+div.bio-section-left-header {
     display: flex;
     font-size: 48px;
     font-weight: 800;
     color: #f9faf8;
-    gap: 10px;
 }
 
-.p {
+div.bio-section-left-minor {
     display: flex;
-    flex-direction: column;
-    color:#f9f8fa;
-}
-.about {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    gap: 10px;
-}
-
-.about p {
     font-size: 18px;
     color: #e5e7eb;
-    flex-wrap: wrap;
-    flex-grow: 1;
 }
 
-.pics {
+div.bio-section-right {
     display: flex;
-    flex: auto;
+    flex-grow: 2;
+    flex-shrink: 3;
+    margin-left: auto;
+    justify-content: flex-end;
 }
 
-
-.main {
+div.information {
     display: flex;
     flex-direction: column;
-    padding: 30px 100px;
+    background-color: #f9faf8;
+    gap: 30px;
+    padding: 25px 180px 50px;
 }
 
-.main p {
+div.information-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #1f2937;
     font-size: 36px;
     font-weight: 800;
-    text-align: center;
-    color: #1f2937;
 }
 
-.container {
+div.information-pictures {
     display: flex;
-    flex: auto;
-    justify-content: space-evenly;
+    gap: 12px;
+    flex-direction: row;
 }
 
-.info {
+div.information-pictures-icon {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: space-between;
+    max-height: 100%;
+    min-width: 0;
+    border-color: #3882F6;
+    gap: 12px;
+}
+
+div.quotes {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    max-width: 250px;
-}
-
-.text {
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 20px;}
-
-
-
-.quote {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #e5e7eb;
     font-size: 36px;
+    font-weight: light;
     font-style: italic;
-    font-weight: 300;
-    padding: 60px 100px;
+    padding: 80px 180px;
+    gap: 12px;
+    background-color: #e5e7eb;
 }
 
-.quote q{
-    margin: auto;
-    quotes: none;
-}
-
-.footer {
+div.main-quote {
     display: flex;
-    background-color: #1f2937;
-    color: #f9f8fa;
+}
+
+div.quotes-author {
+    display: flex;
+    justify-content: end;
+}
+
+
+
+div.call-to-action {
+    display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
-    }
-
-.call {
-    display: flex;
-    background-color: #3882f6;
-    padding: 20px 40px;
-    margin: 60px 100px;
+    flex-direction: row;
+    margin: 120px;
+    padding: 40px;
+    gap: 50px;
+    border-radius: 10px;
+    background-color: #3882F6;
 }
 
-.action {
+div.call-to-action-text {
     display: flex;
     flex-direction: column;
+    align-items: start;
 }
 
-.button {
+div.call-to-action-title {
     display: flex;
-    margin: auto;
+    font-size: 24px;
+    color: #f9faf8;
 }
 
-.donate {
+div.call-to-action-description {
     display: flex;
-    margin-right: auto;
+    font-size: 18px;
+    color: #f9faf8;
 }
 
+button.call-to-action {
+    border: 2px solid #f9faf8;
+}
+
+div.footer {
+    background-color: #1f2937;
+    color: #f9faf8;
+    text-align: center;
+    padding: 25px 50px;
+}
